alterando o endereço do href css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questão 03 - Prova B3</title>
-    <link rel="stylesheet" href="/Q3-prova3b/q03.css">
+    <link rel="stylesheet" href="q03.css">
 </head>
 <body>
     <h2 class="cb1">Cabeçalho Nível 2</h2>
