Adicionei um ícone de gato, na página.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Questão 03 - Prova B3</title>
     <link rel="stylesheet" href="q03.css">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTJEaZlIsFDTfbnmGQQ8jZ_3iJpmG3JoA6Imw&s" type="image/icon">
 
     <style>
 /* Adicione o estilo para scroll-behavior: smooth */
